--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "on-headers": "^1.1.0",
     "rxjs": "~7.8.0",
+    "tmp": "^0.2.5",
     "tslib": "^2.3.0",
+    "webpack-dev-server": "^5.2.2",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
